Updated weird spacing issue for hero image, removed random E on profile, changed header for create game page.

--- a/client/src/theme/index.scss
+++ b/client/src/theme/index.scss
@@ -12,17 +12,12 @@
 //     --color-checked: "tertiary";
 
 // }
-.container {
-  display: block;
-  margin: auto 0;
+.login-button {
 
-  @include desktop {
-      margin-top: 30px;
-  }
-  @include mobile {
-      margin-top: 40px;
-  }
+  text-align: center;
 }
+
+
 .hero-logo {
     display: block;
     margin: 0 auto;
@@ -33,10 +28,10 @@
     }
 }
 .hero-image {
-    width: 70%;
+    display: block;
+    width: 100%;
     margin: 10px 0px;
-    color: map-get($colors, ferngully );
-    box-shadow: 0px 15px 20px;
+    color: map-get($colors, giantpeach );
     align-items: center;
 
     @include mobile {
@@ -49,9 +44,16 @@
 .landing-hero-container {
     display: block;
     margin: 0 auto;
-    width: 80%;
+    width: 60%;
     p {
         color: white !important; 
+        text-align: center;
     }
+    
 }
+
+.hero-header {
+    text-align: center;
+}
+
 
